deploy/base/openehr-nodes/vitala/ehrbase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitala-ehrbase
  labels:
    app: vitala-ehrbase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vitala-ehrbase
  template:
    metadata:
      labels:
        app: vitala-ehrbase
    spec:
      containers:
      - name: vitala-ehrbase
        image: ehrbase/ehrbase:2.33.0
        ports:
        - containerPort: 8080
        command:
          - "java"
        args:
          - "-Dspring.http.codec.max-in-memory-size=10MB"
          - "-jar"
          - "-Dspring.profiles.active=docker"
          - "-Dlogging.file.name=/var/log/ehrbase/ehrbase.log"
          - "ehrbase.jar"
        livenessProbe:
          httpGet:
            path: /ehrbase/management/health
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /ehrbase/management/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
          - name: ehrbase-logs
            mountPath: /var/log/ehrbase
            subPath: vitala/ehrbase
      volumes:
        - name: ehrbase-logs
          persistentVolumeClaim:
            claimName: log-pvc-vitala
