deploy/base/openehr-nodes/vitala/ehrbase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitala-ehrbase
spec:
  selector:
    app: vitala-ehrbase
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  type: ClusterIP
